--- a/src/Viewer.css
+++ b/src/Viewer.css
@@ -1,4 +1,9 @@
+.Viewer {
+  width: 100%;
+  height: calc(100vh - 30px);
+}
+
 .Viewer canvas {
-  max-width: 100vw;
-  max-height: 100vh;
+  max-width: 100%;
+  max-height: 100%;
 }
